--- a/clarifaiku/porch/templates/porch/name.html
+++ b/clarifaiku/porch/templates/porch/name.html
@@ -1,5 +1,16 @@
-<form action="/your-name/" method="post">
+{% load bootstrap3 %}
+
+{# Load CSS and JavaScript #}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+
+
+<form  method="post" class="form">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
+    {% bootstrap_form form %}
+    <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+    </button>
 </form>
