--- a/clarifaiku/porch/static/porch/main.css
+++ b/clarifaiku/porch/static/porch/main.css
@@ -1,6 +1,6 @@
 h1 {
   text-align: center;
-  font-size: 100px;
+  font-size: 90px;
   font-family: 'Montserrat', sans-serif !important;
 }
 
@@ -24,4 +24,13 @@ hr{
   color: #606060;
   border-color: #606060;
   background-color: #606060;
+}
+
+form {
+  text-align: center;
+}
+
+button {
+  width: 100%;
+
 }
